@@ -36,6 +36,8 @@
 - Added ability to write Audio Volume sliders in playercfg.lua
 - Now all profiles are shown as PLayer names instead of a numbers
 - Improved handling of loading/saving profiles
+- Aggressive inlining were requested for all methods with only one call (performance impact will be tested in future but most likely it will be positive)
+- Profiles doesn't have empty slots now
 
 ## Version 1.8.2:
 
